Fix: weird overflow on container class, temporarily hiding it

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -375,6 +375,7 @@ body,
   padding-bottom: 9rem;
   margin-right: auto;
   margin-left:auto;
+  overflow: hidden
 }
 /* .overflow-hidden {
   overflow: hidden;
